@@ -1,5 +1,5 @@
 /*
- * $Id: c_windows.c,v 1.35 2006-02-26 05:51:43 guerra000 Exp $
+ * $Id: c_windows.c,v 1.36 2006-02-26 16:52:36 guerra000 Exp $
  */
 /*
  * ooHG source code:
@@ -91,15 +91,6 @@
 	Copyright 1999-2003, http://www.harbour-project.org/
 ---------------------------------------------------------------------------*/
 
-/*
-#ifndef __XHARBOUR__
-   #if !defined( _HB_API_INTERNAL_ )
-      #define _HB_API_INTERNAL_
-   #endif
-   #define hb_dynsymSymbol( pDynSym )  ( pDynSym )->pSymbol
-#endif
-*/
-
 #define WINVER  0x0500
 #define _WIN32_IE      0x0500
 #define HB_OS_WIN_32_USED
@@ -132,6 +123,8 @@
 #include "tchar.h"
 #include <commctrl.h>
 #include "../include/oohg.h"
+
+PHB_SYMB hb_dynsymSymbol( PHB_DYNS );
 
 BOOL Array2Rect(PHB_ITEM aRect, RECT *rc ) ;
 
